added two new recipes

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/lemon-glaze-cake.html">Lemon Glaze Cake</a>
+    <ul>
+        <li><a href="recipes/lemon-glaze-cake.html">Lemon Glaze Cake</a></li>
+        <li><a href="recipes/school-cake.html">School Cake</a></li>
+        <li><a href="recipes/chocolate-cake.html">Chocolate Cake</a></li>
+    </ul>
 </body>
 </html>
